<!-- Login Page Screen Mockup - START -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
	<TextView
		android:id="@+id/connexusTitleId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:textAlignment="center"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@android:color/holo_orange_dark"
		android:textStyle="bold"
		android:textSize="30sp"
		android:typeface="monospace"
   	    android:text="@string/connexusTitle"
   	    android:paddingLeft="20dp"
   	    android:paddingRight="20dp"
   	    android:layout_gravity="center"/>
	<TextView
		android:id="@+id/loginWithGmailId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="50dp"
		android:layout_marginBottom="10dp"
		android:layout_gravity="left"
		android:textColor="@android:color/background_light"
		android:textSize="20sp"
   	    android:textStyle="bold|italic"
   	    android:typeface="normal"
   	    android:text="@string/gmailLoginTxt"
   	    android:paddingLeft="20dp"
   	    android:paddingRight="20dp"/>
	<EditText
		android:id="@+id/gmailLoginId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_gravity="center"
		android:ems="15"
        android:typeface="monospace"
        android:textStyle="normal"
		android:hint="@string/gmailId"
		android:textColor="@android:color/tab_indicator_text"
        android:background="@android:drawable/editbox_background_normal"
		android:textSize="20sp"
		android:inputType="textEmailAddress" >
		<requestFocus />
	</EditText>
	<EditText
		android:id="@+id/gmailLoginPwd"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_gravity="center"
		android:ems="15"
        android:typeface="monospace"
        android:textStyle="normal"
		android:hint="@string/gmailPwd"
        android:textColor="@android:color/tab_indicator_text"
        android:background="@android:drawable/editbox_background_normal"
		android:textSize="20sp"
		android:inputType="textPassword" />   
	<Button
		android:id="@+id/loginBtnId"
		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginRight="15dp"
		android:layout_marginLeft="15dp"
		android:textColor="@android:color/primary_text_light"
		android:textStyle="normal"
        android:typeface="sans"
		android:background="@android:drawable/btn_default"
		android:text="@string/loginBtn" />
	<Button
		android:id="@+id/viewStreamsBtnId"
 		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginRight="20dp"
		android:layout_marginLeft="20dp"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
		android:textColor="@android:color/black"
		android:textStyle="normal"
        android:typeface="sans"
        android:background="@android:drawable/btn_default"
		android:text="@string/viewStreamsBtn" />
</LinearLayout>
<!-- Login Page Screen Mockuo - END -->