<?xml version="1.0" encoding="utf-8"?>
<!-- Upload Mockup - START -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
    <!--
	<TextView
		android:id="@+id/connexusTitleId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:textAlignment="center"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FF0000"
		android:textStyle="bold"
		android:textSize="25sp"
		android:typeface="serif"
   	    android:text="@string/connexusTitle"
   	    android:paddingLeft="20dp"
   	    android:paddingRight="20dp"
   	    android:layout_gravity="center"/> -->
    <TextView
        android:id="@+id/streamTxtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="15sp"
        android:typeface="serif"
        android:text="@string/streamTxt"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"/>
   <ImageView
       android:id="@+id/imgView"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_marginRight="5dp"
       android:layout_marginLeft="5dp"
       android:layout_weight="1"></ImageView>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background"
        android:layout_marginTop="15dip">
    <Button
        android:id="@+id/chooseFrmLibBtnId"
        android:layout_gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:typeface="sans"
        android:background="@android:drawable/btn_default"
        android:text="@string/chooseFrmYourLibraryBtn"
        android:drawableLeft="@drawable/ic_action_storage"/>
	<Button
		android:id="@+id/useCameraBtnId"
		android:layout_gravity="start"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="2dp"
		android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/chooseFrmLibBtnId"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:typeface="sans"
        android:background="@android:drawable/btn_default"
		android:text="@string/useCameraBtn"
        android:drawableLeft="@drawable/ic_action_camera"/>
	<EditText
		android:id="@+id/addMsgOrTagTxtId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_below="@+id/chooseFrmLibBtnId"
		android:ems="25"
		android:hint="@string/addMsgOrTag"
		android:layout_marginRight="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginTop="10dp"
		android:textColor="#000000"
		android:textSize="20sp"
		android:inputType="textMultiLine" >
		<requestFocus />
	</EditText>
	<Button
		android:id="@+id/uploadBtnId"
		android:layout_gravity="start"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="5dp"
		android:layout_marginLeft="5dp"
        android:layout_below="@+id/addMsgOrTagTxtId"
		android:paddingLeft="15dp"
		android:paddingRight="15dp"
        android:textColor="@android:color/black"
        android:textStyle="normal"
        android:typeface="sans"
		android:clickable="false"
        android:background="@android:drawable/btn_default"
		android:text="@string/uploadBtn" />
    </RelativeLayout>
</LinearLayout>
<!--  Upload Mockup - END -->