<?xml version="1.0" encoding="utf-8"?>
<!-- View A Stream (Single Stream) Mockup - START --> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
    <!--
	<TextView
		android:id="@+id/connexusTitleId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:textAlignment="center"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FF0000"
		android:textStyle="bold"
		android:textSize="25sp"
		android:typeface="serif"
   	    android:text="Single Stream"
   	    android:paddingLeft="20dp"
   	    android:paddingRight="20dp"
   	    android:layout_gravity="center"/> -->
	<TextView
		android:id="@+id/viewSingleStreamTxtId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:gravity="start"
		android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:textSize="15sp"
        android:typeface="serif"
		android:text="@string/viewSingleStreamTxt"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"/>
    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:numColumns="4"
        android:verticalSpacing="2dp"
        android:horizontalSpacing="2dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:id="@+id/gridViewPictures">
    </GridView>
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
        android:paddingTop="10dp"
		android:orientation="horizontal"
        android:background="@drawable/background"
		android:layout_marginTop="0dip">
 		<Button
			android:id="@+id/morePicsBtnId"
			android:layout_gravity="start"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="2dp"
			android:layout_marginLeft="2dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
			android:text="@string/morePicsBtn"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"/>
		<Button
			android:id="@+id/uploadImgBtnId"
			android:layout_gravity="start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="2dp"
			android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/morePicsBtnId"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
			android:text="@string/uploadImgBtn"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"/>
		<Button
			android:id="@+id/streamsBtnId"
			android:layout_gravity="start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="2dp"
			android:layout_marginLeft="2dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
            android:layout_toRightOf="@+id/uploadImgBtnId"
			android:text="@string/streamsBtn"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small.Inverse"/>
	</LinearLayout>
</LinearLayout>
<!-- View a Stream (Single Stream) Mockup - END -->