<?xml version="1.0" encoding="utf-8"?>
<!--  Camera Mockup - START -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
    <TextView
        android:id="@+id/connexusTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:textSize="15sp"
        android:typeface="serif"
        android:text="Camera"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="center"/>
    <FrameLayout
	    android:id="@+id/camera_preview"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"/>
	<RelativeLayout 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
        android:background="@drawable/background"
		android:layout_marginTop="0dip">
		<Button
			android:id="@+id/takePicBtnId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="15dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:textColor="#000000"
			android:textStyle="bold"
			style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/ic_action_camera"
			android:text="@string/takePicBtn"/>
		<Button
			android:id="@+id/usePicBtnId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@+id/takePicBtnId"
            android:layout_toRightOf="@+id/takePicBtnId"
			android:layout_marginTop="15dp"
			android:layout_marginBottom="0dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:textColor="#000000"
			android:textStyle="bold"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/usePicBtn"
            android:drawableTop="@drawable/ic_action_attach"/>
		<Button
			android:id="@+id/streamsBtnId"
			android:layout_below="@+id/takePicBtnId"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="0dp"
			android:layout_marginRight="20dp"
			android:layout_marginLeft="10dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
	        android:background="@android:drawable/btn_default"
			android:text="@string/streamsBtn" />
	</RelativeLayout>
</LinearLayout>
<!--  Camera Mockup - END  -->
