<?xml version="1.0" encoding="utf-8"?>
<!--  Search Results Mockup - START -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
    <TextView
        android:id="@+id/connexusTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:textSize="15sp"
        android:typeface="serif"
        android:text="Searched Streams"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background"
        android:layout_marginTop="15dip">
		<EditText
			android:id="@+id/searchTxtId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/searchText"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:textColor="#000000"
			android:textSize="20sp"
			android:inputType="textNoSuggestions"
            android:drawableLeft="@drawable/ic_action_search">>
			<requestFocus />
		</EditText>
		<Button
			android:id="@+id/searchBtnId"
			android:layout_gravity="start"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
            android:layout_toRightOf="@+id/searchTxtId"
			android:text="@string/searchStreamBtn" />
        <TextView
            android:id="@+id/srchResultsTxtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|top"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="serif"
            android:text="@string/srchResultsTxt"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:layout_below="@+id/searchTxtId"/>
       <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="75dp"
            android:numColumns="4"
            android:verticalSpacing="5dp"
            android:horizontalSpacing="5dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:layout_below="@+id/srchResultsTxtId">
        </GridView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background"
        android:layout_marginTop="15dip">
        <Button
            android:id="@+id/moreSrchResultsBtnId"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
            android:text="@string/moreSrchResultsBtn" />
	</RelativeLayout>
</LinearLayout>
<!--  Search Results Mockup - END  -->