<?xml version="1.0" encoding="utf-8"?>
<!-- View Streams Mockup - START -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
    android:background="@drawable/background"
	tools:context=".MainActivity">
	<TextView
		android:id="@+id/connexusTitleId"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:gravity="center"
		android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="@android:color/holo_orange_dark"
		android:textStyle="bold"
		android:textSize="15sp"
		android:typeface="serif"
   	    android:text="All Streams"
   	    android:paddingLeft="5dp"
   	    android:paddingRight="5dp"
   	    android:layout_gravity="center"/>
    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:numColumns="4"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:id="@+id/gridView">
    </GridView>
	<RelativeLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:background="@drawable/background"
		android:layout_marginTop="15dip">
        <EditText
			android:id="@+id/searchTxtId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/searchText"
			android:layout_marginRight="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="0dp"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:textColor="#000000"
			android:textSize="20sp"
			android:inputType="textNoSuggestions"
			android:drawableLeft="@drawable/ic_action_search">
            <requestFocus/>
        </EditText>
		<Button
			android:id="@+id/nearbyBtnId"
			android:layout_toRightOf="@+id/searchTxtId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:textColor="@android:color/primary_text_dark_nodisable"
			android:textStyle="bold"
			style="?android:attr/buttonBarButtonStyle"
			android:text="@string/nearbyBtn"
			android:drawableTop="@drawable/ic_action_web_site"/>
		<Button
			android:id="@+id/searchBtnId"
			android:layout_below="@+id/searchTxtId"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="10dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:textColor="@android:color/black"
			android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
			android:text="@string/searchStreamBtn" />
        <!--
		<Button
			android:id="@+id/mySubscribedStreamsBtnId"
			android:layout_below="@+id/searchBtnId"
			android:layout_gravity="center"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="10dp"
			android:paddingLeft="15dp"
			android:paddingRight="15dp"
			android:textColor="@android:color/black"
			android:textStyle="normal"
            android:typeface="sans"
            android:background="@android:drawable/btn_default"
			android:text="@string/mySubscribedStreamsBtn" /> -->
	</RelativeLayout>
</LinearLayout>
<!-- View Streams Mockup - END-->